--- a/templates/nordic.css
+++ b/templates/nordic.css
@@ -155,6 +155,11 @@ a{color:inherit}
 [data-scheme="dark"] .menu{
   background:rgba(10,10,10,.96);
 }
+.header .drop .menu{
+  bottom:auto; top:100%;
+  margin-top:8px;
+  margin-bottom:0;
+}
 .footer .drop .menu{
   bottom:100%; top:auto;
 }
